[gd_scene load_steps=4 format=3 uid="uid://u2g86u33j7xd"]

[ext_resource type="Theme" uid="uid://dw8tap3ih7i5s" path="res://ui/theme.tres" id="1_lygf8"]
[ext_resource type="Script" path="res://ui/pause_menu.gd" id="2_pw0ui"]
[ext_resource type="PackedScene" uid="uid://qfcb5fhfgwab" path="res://scenes/settings.tscn" id="3_h3hsw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lygf8")
script = ExtResource("2_pw0ui")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)

[node name="PauseMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenuButtons"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenuButtons"]
layout_mode = 2
text = "Settings
"

[node name="Quit" type="Button" parent="PauseMenuButtons"]
layout_mode = 2
text = "Quit
"

[node name="Settings" parent="." instance=ExtResource("3_h3hsw")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
text = "Back"

[connection signal="pressed" from="PauseMenuButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenuButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
